--- a/practice_1/index.html
+++ b/practice_1/index.html
@@ -56,39 +56,39 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-9 col-lg-push-3"><!--Меняем блоки местами col-lg-push-3-->
-					<from class="visible-xs" role="search">
+					<form class="visible-xs" role="search">
 						<div class="form-group">
 							<div class="input-group">
-								<input type="search" class="form-color input-lg" placeholder="Ваш запрос">
+								<input type="search" class="form-control input-lg" placeholder="Ваш запрос">
 								<div class="input-group-btn">
-									<button class="btn btn-default btn-lg" type="submit"><i class="glyphicon-search"></i></button>
+									<button class="btn btn-default btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
 								</div>
 							</div>
 						</div>
-					</from>
+					</form>
 
-					<h2>Новые фильмы</h2>
+					<h2>Игры</h2>
 					<hr>
 					<div class="row">
 						
 						<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<a href="show.html"><img src="assets/img/inter.png" alt="интерстеллар"></a>
-							<div class="film_label"><a href="show.html">Интерстеллар</a></div>
+							<a href="show.html"><img src="assets/img/terraria.jpg" alt="интерстеллар"></a>
+							<div class="film_label"><a href="show.html">Terraria</a></div>
 						</div>
 
 							<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-								<a href="#"><img src="assets/img/matrix.png" alt="матрица"></a>
-								<div class="film_label"><a href="#">Матрица</a></div>
+								<a href="#"><img src="assets/img/nfs.jpg" alt="матрица"></a>
+								<div class="film_label"><a href="#">NFS Heat</a></div>
 							</div>
 
 							<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<a href="show.html"><img src="assets/img/cloud.png" alt="облачный атлас">Облачный атлас</a>
-							<div class="film_label"><a href="#"></a></div>
+							<a href="#"><img src="assets/img/overwatch.jpg" alt="облачный атлас"></a>
+							<div class="film_label"><a href="#">Overwatch</a></div>
 						</div>
 
 						<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<a href="show.html"><img src="assets/img/max.png" alt="безумный макс"></a>
-							<div class="film_label"><a href="#">Безумный макс</a></div>
+							<a href="#"><img src="assets/img/destiny.jpg" alt="безумный макс"></a>
+							<div class="film_label"><a href="#">Destiny 2</a></div>
 						</div>
 
 					</div>
@@ -99,22 +99,22 @@
 						<hr>
 						<div class="row">
 							<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<a href="show.html"><img src="assets/img/xfiles.png" alt=""></a>
+							<a href="#"><img src="assets/img/xfiles.png" alt=""></a>
 							<div class="film_label"><a href="#">Секретные материалы</a></div>
 						</div>
 
 						<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<a href="show.html"><img src="assets/img/silicon.png" alt=""></a>
+							<a href="#"><img src="assets/img/silicon.png" alt=""></a>
 							<div class="film_label"><a href="#">Кремневая долина</a></div>
 						</div>
 
 							<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<a href="show.html"><img src="assets/img/dead.png" alt=""></a>
+							<a href="#"><img src="assets/img/dead.png" alt=""></a>
 							<div class="film_label"><a href="#">Ходячие мертвицы</a></div>
 						</div>
 
 							<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<a href="show.html"><img src="assets/img/breakingbad.png" alt=""></a>
+							<a href="#"><img src="assets/img/breakingbad.png" alt=""></a>
 							<div class="film_label"><a href="#">Во все тяжкие</a></div>
 						</div>
 
@@ -142,22 +142,22 @@
 
 						</div>
 
-						<div class="col-lg-3 col-lg-pull-9"> <!--Меняем блоки местами col-lg-pull-9-->
-							<div class="panel panel-info hidden.xs">
-								<div class="pannel-heading"><div class="sidebar-header">Поиск</div></div>
-								<div class="panel-body">
-									<form role="search">
-										<div class="form-group">
-											<div class="input-group">
-												<input type="search" class="form-control input-lg" placeholder="Ваш запрос">
-												<div class="input-group-btn">
-													<button class="btn btn-default btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-												</div>
-											</div>
+						<div class="col-lg-3 col-lg-pull-9">
+					<div class="panel panel-info hidden-xs">
+						<div class="panel-heading"><div class="sidebar-header">Поиск</div></div>
+						<div class="panel-body">
+							<form role="search">
+								<div class="form-group">
+									<div class="input-group">
+										<input type="search" class="form-control input-lg" placeholder="Ваш запрос">
+										<div class="input-group-btn">
+											<button class="btn btn-default btn-lg" type="submit"><i class="glyphicon-search"></i></button>
 										</div>
-									</form>
+									</div>
 								</div>
-							</div>
+							</form>
+						</div>
+					</div>
 
 							<div class="panel panel-info">
 								<div class="panel-heading"><div class="sidebar-header">Вход</div></div>
